--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,15 @@
 div.preview {margin: auto; height: 1143px; max-height: 1143px; width: 795px; max-width: 795px; overflow-x: hidden; overflow-y: auto;}
+
 body {padding: 0;margin: 0;}
 .mark{background-color: transparent !important;}
+
 body{
     font-family: 'Roboto' !important;
     min-width: 0px !important;
+    background:#efefef;
+    margin: auto; 
+    overflow-x: hidden; 
+    overflow-y: hidden;
 }
 .contacts > div.icon::before{
     font-size: 14px;
@@ -21,4 +27,48 @@ body{
     width: 150px;
     height: 150px;
     border-radius: 100px;
+}
+
+body,html{
+    min-width: 0px;
+    background:#efefef !important;
+} 
+.preview{ border: 1px solid lightgrey; 
+    max-height: unset !important; 
+    height: unset !important;
+}
+
+@font-face {
+	font-family: 'Font Awesome 5 Brands';
+	font-style: normal;
+	font-weight: normal;
+	src: url("/fonts/fa-brands-400.eot");
+	src: url("/fonts/fa-brands-400.eot@") format("embedded-opentype"), url("/fonts/fa-brands-400.woff2") format("woff2"), url("/fonts/fa-brands-400.woff") format("woff"), url("/fonts/fa-brands-400.ttf") format("truetype"), url("/fonts/fa-brands-400.svg") format("svg");
+	}
+	.modal-switcher-container.social-likes {display: block; box-sizing: border-box; left: calc(50% - 460px); padding: 5px; position: fixed; top: 66px; text-align: center; transition: opacity 0.3s; }
+	.modal-switcher-container.social-likes:hover { opacity: 1 !important; }
+	.social-icon {display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-direction: row; flex-direction: row; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-flex: 0; -ms-flex: 0 0 46px; flex: 0 0 46px; height: 46px; width: 46px; text-align: center; color: #fff; text-decoration: none; border-radius: 23px;  }
+	.social-likes__widget .social-likes__icon {display: none;}
+	.social-likes__button {padding: unset; font-weight: normal;}
+	.social-likes__button i { line-height: 1.5rem; font-size: 1.25rem; }
+	.social-likes__widget .fa-facebook-f:before {content: "\f39e"; }
+	.social-likes__widget .fa-vk:before {content: "\f189"; }
+	.social-likes__widget .fa-twitter:before {content: "\f099"; }
+	.error {font-family: rw, Georgia, Times New Roman, serif;    text-align: center; font-size: 20px;}
+	.headerPreview {    box-sizing: border-box; width: 795px; margin: auto; padding: 8px 0; height: 66px; font-family: rw, Georgia, Times New Roman, serif;} 
+	.headerPreview img {float: left;}
+	.headerPreview .s-header-btn2 {height: 49px; background-color: white; background-image: -webkit-linear-gradient(196deg, #00e392 0%, #00bbba 100%); background-image: -o-linear-gradient(196deg, #00e392 0%, #00bbba 100%); background-image: linear-gradient(254deg, #00e392 0%, #00bbba 100%); -webkit-border-radius: 25px; border-radius: 25px; -webkit-box-shadow: 0 0 12px rgba(0, 187, 186, 0.4); box-shadow: 0 0 12px rgba(0, 187, 186, 0.4); display: inline-block; vertical-align: top; padding: 0 34px; color: white; font-size: 15px; font-weight: 600; line-height: 49px; text-align: center; -webkit-transition: .3s background; -o-transition: .3s background; transition: .3s background; border: none;font-family: rw, Georgia, Times New Roman, serif;text-decoration: none; float: right;}
+	.headerPreview .s-header-btn2:hover {background-image: -webkit-linear-gradient(164deg, #05d88d 0%, #03aaa9 100%); background-image: -o-linear-gradient(164deg, #05d88d 0%, #03aaa9 100%); background-image: -webkit-linear-gradient(196deg, #05d88d 0%, #03aaa9 100%); background-image: -o-linear-gradient(196deg, #05d88d 0%, #03aaa9 100%); background-image: linear-gradient(254deg, #05d88d 0%, #03aaa9 100%); }
+
+
+@media (max-width:  768px) {
+    body{background-color: black;}
+    html body div.preview{
+        width: 100%; 
+        margin: 0;
+    }
+
+    html body .headerPreviev{
+        display: none;
+    }
 }
